networkpolicy/allow-ui-admin-to-inventory-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-admin-to-inventory-service
spec:
  podSelector:
    matchLabels:
      role: service
      service: inventory
  ingress:
    - from:
        - podSelector:
            matchLabels:
              scope: admin
              role: ui
      ports:
        - protocol: TCP
          port: 9001
