networkpolicy/allow-ui-user-to-account-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-user-to-account-service
spec:
  podSelector:
    matchLabels:
      role: service
      service: account
  ingress:
    - from:
        - podSelector:
            matchLabels:
              scope: user
              role: ui
      ports:
        - protocol: TCP
          port: 9003
